themes/jip/assets/scss/_header.scss
#header {
  height: 30px;
  padding: 25px 0;
  border-bottom: 1px solid #efefef;

  @media screen and (max-width: 766px) {
    text-align: center;
    height: auto;
    position: relative;
    padding-bottom: 10px;
  }

  a {
    color: $color-gray01;
    transition: color 0.3s;

    @media not screen and (max-width: 600px), not screen and (max-width: 766px) {
      &:hover {
        color: $color-main;
      }
    }
  }

  #stamp {
    float: left;
    font-size: 14px;
    text-transform: uppercase;
    font-family: $font-sans;

    .emboldened {
      font-weight: bold;
    }

    @media screen and (max-width: 766px) {
      float: none;
      text-align: center;
      display: inline-block;
      margin: 0 auto;
    }

    #name {
      font-size: 2em;
      line-height: 1;
      font-weight: 400;
    }

    #pseudonym {
      color: $color-gray01;
      text-align: right;
      cursor: default;
      font-weight: 400;
    }
  }
}
#main-nav {
  float: left;
  margin-left: 25px;

  @media screen and (max-width: 766px) {
    text-align: center;
    float: none;
    margin-left: 0;
    margin-top: 15px;
  }

  >ul {
    @media screen and (max-width: 600px) {
      display: none;
    }

    >li {
      margin-left: 30px;
      display: inline-block;
      line-height: 2;

      @media screen and (max-width: 766px) {
        margin-left: 0;
        margin-right: 50px;

        &:last-of-type {
          margin-right: 0;
        }
      }

      @media not screen and (max-width: 600px), not screen and (max-width: 766px) {
        &:hover > a {
          color: $color-main;
        }
      }
      > a {
        padding: 31px 0 35px 0;
        text-transform: lowercase;

        &:after { padding-left: 0; }

        @media screen and (max-width: 766px) {
          padding: 16px 0;
        }
      }
    }
    li {
      position: relative;

      @media not screen and (max-width: 600px), not screen and (max-width: 766px) {
        &:hover > ul {
          display: block;
        }
      }
    }
  }
}

#mobile-nav {
  display: none;
  height: 37px;
  line-height: 30px;
  position: relative;

  @media screen and (max-width: 600px) {
    display: block;
    text-align: left;
  }

  a {
    display: block;
  }

  .button {
    cursor: pointer;
  }

  .container {
    display: none;
  }

  .menu {
    position: relative;
    width: 100%;
    float: left;

    .button {
      background: #f2f2f2;
      border: 1px solid $color-gray04;
      color: #999;
      padding: 0 60px 0 10px;
      position: relative;
      border-radius: 5px;

      @media not screen and (max-width: 600px), not screen and (max-width: 766px) {
        &:hover {
          color: #999;
        }
      }

      &.on {
        color: $color-gray01;
        border-radius: 5px 5px 5px 0;

        &:before {
          content: "\f077";
        }
      }

      &:before {
        content: "\f078";
        color: $color-gray04;
        font: 16px $font-icon;
        line-height: 30px;
        position: absolute;
        top: 0;
        right: 40px;
      }
    }

    .container {
      background: #f2f2f2;
      border: 1px solid #ddd;
      border-top: none;
      position: absolute;
      top: 31px;
      z-index: 1;
      border-radius: 0 0 5px 5px;

      ul {
        list-style: none;

        ul {
          margin-left: 20px;
        }
      }

      a {
        padding: 0 10px;
      }
    }
  }

  .search {
    position: absolute;
    float: right;
    top: 0;
    right: 0;

    .button {
      background: $color-gray04;
      width: 30px;
      height: 30px;
      position: absolute;
      top: 1px;
      right: -1px;
      border-radius: 0 5px 5px 0;

      &:before {
        content: "\f002";
        color: #f2f2f2;
        font: 20px $font-icon;
        line-height: 30px;
        position: absolute;
        top: 0;
        left: 7px;
      }

      &.on {
        background: $color-gray03;

        &:before {
          content: "\f00d";
        }
      }
    }

    .container {
      position: absolute;
      right: 51px;
      z-index: 1;
    }

    input[type="text"] {
      background: #fff;
      border: 1px solid $color-gray04;
      border-right: none;
      color: $color-gray01;
      font-family: $font-default;
      height: 30px;
      width: 100%;
      padding: 0 10px;
      border-radius: 5px 0 0 5px;
    }
  }
}

.desk_search {
  display: none;
  padding-bottom: 15px;
}

#search_box {
  width: 100%;
  border: 1px solid #ddd;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;

  padding: 5px;

  font-family: $font-default;

  &:focus { outline: none; }
}

#search_btn {
  cursor: pointer;
}

